--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,7 +9,7 @@
 @import '~bootstrap/scss/bootstrap';
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
-// @import 'custom';
+@import 'custom';
 
 .navbar-laravel {
   background-color: #fff;
